--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@ layout: default
     {% if paginator.previous_page %}
       <a href="{{ paginator.previous_page_path }}" class="previous"><strong>Previous</strong></a>
     {% else %}
-      <span class="previous">Previous</span>
+      <span class="previous"><strong>Previous</strong></span>
     {% endif %}
     <span class="page_number ">Page: {{ paginator.page }} of {{ paginator.total_pages }}</span>
     {% if paginator.next_page %}
       <a href="{{ paginator.next_page_path }}" class="next"><strong>Next</strong></a>
     {% else %}
-      <span class="next ">Next</span>
+      <span class="next "><strong>Next</strong></span>
     {% endif %}
   </div>
   <p></p>
